Added more style edits

--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,12 +1,9 @@
 $bgcolor: #170229;
-$primary: #B38EE4;
+$primary: #a479db;
 $main-text: white;
 $custom-font: "Trebuchet MS", sans-serif;
 
 
-.card-body {
- background-color: $bgcolor;
-}
 
 .movieTitle {
     color: $main-text;
