--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-$primary: #B38EE4;
+$primary: #a479db;
 $main-text: white;
 
 
@@ -8,8 +8,6 @@ body {
   background-size: cover;
   background-attachment: fixed;
 }
-
-
 
 @import '~bootstrap/scss/bootstrap.scss';
 
