--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -1,10 +1,21 @@
 .center-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
 
+
+.movie-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+
+}
+
+.movie-title, .director {
+  font-size: 15px;
+}
 
   @import "~bootstrap/scss/bootstrap.scss";
