--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,22 +1,30 @@
-
-
+$smalltext: white;
 
 .movie-details {
-  max-width: 60%;
+  max-width: 40%;
   margin: 0 auto; /* Center horizontally */
   padding: 20px;
+  color: $smalltext;
 }
 
 img {
 
-  width: 60%; /* Adjust the width to your desired size */
+  width: 40%; /* Adjust the width to your desired size */
   display: block;
   margin: 0 auto; /* Center horizontally */
   }
+
+/*
+  .button-container{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  */
+
   
-
-
-
 
 
   @import "~bootstrap/scss/bootstrap.scss";
