--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,30 +1,53 @@
 $smalltext: white;
+$titlefont:'Oswald', sans-serif;
+$smallfont: 'Quicksand', sans-serif;
 
 .movie-details {
-  max-width: 40%;
-  margin: 0 auto; /* Center horizontally */
+  max-width: 80%;
+  margin: 0 auto;
   padding: 20px;
   color: $smalltext;
+  margin-top: 20px;
+  border-radius: 20px;
+  font-family: $smallfont;
+}
+
+.movieViewTitle {
+  font-family: $titlefont;
 }
 
 img {
 
-  width: 40%; /* Adjust the width to your desired size */
+  width: 55%;
   display: block;
-  margin: 0 auto; /* Center horizontally */
+  margin: 0 auto;
+}
+
+
+.movie-view-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 200px;
+  font-family: $smallfont;
+}
+
+
+
+@media only all and (max-width: 700px) {
+
+  .movie-details {
+    font-size: 13px;
   }
 
-/*
-  .button-container{
-    width: 50%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  img {
+    width: 90%;
   }
-  */
 
-  
+}
 
 
-  @import "~bootstrap/scss/bootstrap.scss";
+
+@import "~bootstrap/scss/bootstrap.scss";
