--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -1,4 +1,6 @@
 $smalltext: white;
+$titlefont:'Oswald', sans-serif;
+$smallfont: 'Quicksand', sans-serif;
 
 .center-container {
   display: flex;
@@ -7,6 +9,15 @@ $smalltext: white;
   justify-content: center;
   margin: 0 auto;
   color: $smalltext;
+  font-family: $smallfont;
+}
+
+.update-button {
+  margin: 20px 0;
+}
+
+.delete-button {
+  margin-top: 10px;
 }
 
 
@@ -14,20 +25,19 @@ $smalltext: white;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-bottom: 50px;
-}
-
-.movie-title, .director {
-  font-size: 15px;
+  margin-bottom: 80px;
+  font-family: $smallfont;
 }
 
 .userinfo-title {
-  margin: 50px 0 40px 0;
+  margin-bottom: 40px;
+  font-family: $titlefont;
 
 }
 
 .favorite-movies-title {
   margin: 60px 0 40px 0;
+  font-family: $titlefont;
 }
 
   @import "~bootstrap/scss/bootstrap.scss";
