--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -12,16 +12,54 @@ font-family: $smallfont;
   font-family: $titlefont;
 }
 
+.card-img-container {
+  height: 420px; 
+  overflow: hidden;
+}
 
-@media only all and (max-width: 1020px) {
+.card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.heart-icon {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 20px;
+  color: rgb(239, 192, 255); /* Change this color to whatever you want for the heart icon */
+  cursor: pointer;
+}
+
+
+@media only all and (max-width: 1180px) {
 
   .movie-card {
     font-size: 13px;
   }
 
+  .card-img-container {
+    height: 350px; 
+    overflow: hidden;
+  }
 }
 
+@media only all and (max-width: 990px) {
 
+  .card-img-container {
+    height: 250px; 
+    overflow: hidden;
+  }
+}
+
+@media only all and (max-width: 770px) {
+
+  .card-img-container {
+    height: 90%; 
+    overflow: hidden;
+  }
+}
 
 
 
